# log_structured_kv_store

./: README.md  pyproject.toml
app/: main.py
app/templates/pages/: index.html
database/: index.py  keydir.py  server.py  skiplist.py
tests/: test_index.py  test_keydir.py
