[project]
name = "log-structured-kv-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
